Added first_name and last_name columns to author model

--- a/test/fixtures/authors.yml
+++ b/test/fixtures/authors.yml
@@ -4,8 +4,15 @@
 # model remove the '{}' from the fixture names and add the columns immediately
 # below each fixture, per the syntax in the comments below
 #
-one: {}
+one: 
+    first_name: Sebastian 
+    last_name: Burban
+    email: sebburban@hotmail.com
+    
 # column: value
 #
-two: {}
+two: 
+    first_name: Sancho 
+    last_name: Panza
+    email: spanza@hotmail.com    
 #  column: value
